Update signature message in index.html

--- a/index.html
+++ b/index.html
@@ -1011,7 +1011,7 @@
                 <span class="daddy-text">I will always be DADDY</span>
             </div>
             <p class="birthday">Happy Birthday, Divija.</p>
-            <p class="signature">// With love, from your chaos engine</p>
+            <p class="signature">// With love, from your Daddy ~Jared</p>
         </section>
 
         <div style="height: 80px;"></div>
